# wad2-project-test-

./: .gitignore  README.md  SPRITE_CONFIGURATION.md  package-lock.json  package.json
backend/: .env.backup  EMAIL_NOTIFICATIONS_SUMMARY.md  EMAIL_NOTIFICATION_TESTING.md  EMAIL_SETUP_GUIDE.md  NOTIFICATION_TESTING_GUIDE.md  README.md  TEAM_EMAIL_READY.md  TEAM_EMAIL_SETUP.md  email-config-shared.txt  pyproject.toml  requirements.txt  setup_email.py
backend/app/: main.py
backend/app/api/routes/: achievements.py  google_oauth.py  minigame.py  notifications.py  pet.py  pet_socket.py  profile.py  study_sessions.py  tasks.py  wellness.py
backend/app/core/: email.py  google_calendar.py  notification_sender.py
backend/app/core/pet_engine/: animation_states.py  pet_state.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/background/: Basic Furniture.tsx  Basic Grass Biom things 1.tsx  Basic_Plants.tsx  Free_Chicken_House.tsx  Tilled_Dirt_v2.tsx  Water.tsx  Wood Bridge.tsx  Wooden House.tsx  Wooden_House_Walls_Tilset.tsx  big.tsx  hills.tsx  main-tiles.tsx  pet map.tmx
frontend/src/: App.vue  main.js
frontend/src/components/: AnimatedCoin.vue  AnimatedPet.vue  BackgroundsGallery.vue  GlobalDesktopPet.vue  PetMinigame.vue  SpritePreview.vue  TMXTileBackground.vue  TileBackground.vue  header.vue  sidebar.vue
frontend/src/composables/: useAuth.js  useBackgrounds.js  useCoins.js  useGlobalPet.js  useGoogleSignIn.js  useMinigameProgress.js  usePet.js  useStudySessions.js  useSubjects.js  useUserProfile.js
(+18 files in other folders)
