[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.118.1",
    "firebase-admin>=7.1.0",
    "firebase-functions>=0.4.3",
    "pydantic>=2.12.0",
    "python-socketio>=5.10.0",
    "pillow>=10.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.1.1",
]

[tool.ty.environment]
root = ["./app"]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
]
